--- a/Project_Polished_Version/SearchJob_Window.xaml
+++ b/Project_Polished_Version/SearchJob_Window.xaml
@@ -21,8 +21,8 @@
         <!-- Job List Section -->
         <StackPanel Grid.Column="0" Margin="10" Background="#F9F9F9">
             <TextBox Name="SearchBox"  Margin="0,50,0,10" Padding="10" BorderBrush="Gray" BorderThickness="1" TextChanged="SearchBox_txtchange" />
-            <ListBox Name="JobList" Margin="0,10" Background="White" BorderBrush="LightGray" BorderThickness="1" SelectionChanged="Search_selectionChange"
-                  >
+            <ListBox Name="JobList" Margin="0,10" Background="White" BorderBrush="LightGray" BorderThickness="1" Height="346" SelectionChanged="Search_selectionChange"
+                   ScrollViewer.VerticalScrollBarVisibility="Visible" >
                 <!-- Sample items dynamically populated from code -->
             </ListBox>
         </StackPanel>
